--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,4 +1,4 @@
-/* header */
+/* Header */
 .header {
   display: block;
   text-align: center;
@@ -67,6 +67,15 @@
 
 .summary {
   width: 30%;
+}
+
+.card {
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 /* Media Queries */
